# taxi_demand_predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml
logs/: logs_feature_pipeline.csv
notebooks/: 01_load_and_validate_raw_data.ipynb  01b_load_and_validate_raw_data_functions.ipynb  01b_load_and_validate_raw_data_pipeline.ipynb  02_transform_raw_data_into_ts_data.ipynb  02b_transform_raw_data_into_ts_data_pipeline.ipynb  03_transform_ts_data_into_features_and_target.ipynb  04_transform_raw_data_into_features_and_target.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  12a_feature_pipeline.ipynb  12b_feature_pipeline_log_last_event.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
src/: config.py  data.py  data_split.py  frontend.py  inference.py  paths.py  plot.py
tests/: test_src.py
