[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["João Nogueira <joao.nogueira@datarisk.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
pandas = "1.5.2"
pyarrow = "^12.0.0"
tqdm = "^4.65.0"
plotly = "^5.14.1"
requests = "^2.30.0"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
optuna = "^3.1.1"
python-dotenv = "^1.0.0"
hopsworks = "^3.0.5"
streamlit = "^1.22.0"
geopandas = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
